[tool.poetry]
name = "vyos-users-jp.github.io"
version = "0.1.0"
description = ""
authors = ["Yuya Kusakabe <yuya.kusakabe@gmail.com>"]
license = "CC-BY-NC-SA-4.0"

[tool.poetry.dependencies]
python = "^3.9"
pelican = "^4.7.2"
Markdown = "^3.3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
